apps/synapse/matrix-auth-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix-auth-service
  namespace: synapse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matrix-auth-service
  template:
    metadata:
      labels:
        app: matrix-auth-service
    spec:
      containers:
      - name: mas
        image: ghcr.io/element-hq/matrix-authentication-service:1.26.0@sha256:e089f1048a1d4a9a492ed17b9fe759100f1bd619407b001f5927928d88b780c4
        ports:
        - containerPort: 8080
          name: http
        args: 
          - "server"
        volumeMounts:
        - name: config
          mountPath: /etc/mas/config.yaml
          subPath: config.yaml
      volumes:
      - name: config
        secret:
          secretName: mas-secrets
