apps/synapse/matrix-auth-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix-auth
  namespace: synapse
spec:
  selector:
    app: matrix-auth-service
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
